--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
     "@react-pdf/renderer": "^4.1.5",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "file-save": "^0.2.0",
     "file-saver": "^2.0.5",
+    "jquery": "^3.7.1",
     "pdfjs-dist": "^4.9.155",
+    "popper.js": "^1.16.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
